# qonic-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml  vercel.json
api/: index.py
scripts/: get_token.py  test_api.py
src/qonic_mcp/: __init__.py  server.py
